# project

./: README.md
ClionProjects/cellsumformula/: CMakeLists.txt  Cell.cpp  Cell.h  ListException.h  MaxFormula.cpp  MaxFormula.h  MeanFormula.cpp  MeanFormula.h  MinFormula.cpp  MinFormula.h  MyGrid.cpp  MyGrid.h  Notebook.cpp  Notebook.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h  SumFormula.cpp  SumFormula.h  main.cpp  main.h
ClionProjects/cellsumformula/test/: CMakeLists.txt  Celltest.cpp  Celltest.h  Formuletest.h  runAllTests.cpp
